--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat Widget</title>
+    <style>
+        /* Example CSS to position the chat icon */
+        #_2chat-widget {
+            position: fixed;
+            top: 20px; /* Adjust the distance from the top */
+            right: 20px; /* Adjust the distance from the right */
+            z-index: 1000; /* Ensure it stays on top of other elements */
+        }
+    </style>
 </head>
 <body>
     <script>
