--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             phoneNumber: '+917483048220',
             accountName: 'Welcome!',
             statusMessage: 'We typically reply within 1 hour',
-            chatMessage: 'Hey there! 👋\nHow can we help you?',
+            chatMessage: `Hi`,
             placeholder: 'Type your message...',
             position: 'right',
             colorScheme: 'automatic',
